--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
 
     <application
+        android:name="com.mikhail.weatherclient.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,12 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.mikhail.weatherclient.SettingsActivity" />
-        <activity android:name="com.mikhail.weatherclient.CityChangerActivity" />
+        <activity android:name="com.mikhail.weatherclient.presentation.SettingsActivity" />
+        <activity android:name="com.mikhail.weatherclient.presentation.CityChangerActivity" />
         <activity android:name="com.mikhail.weatherclient.Constants" />
-        <activity android:name="com.mikhail.weatherclient.ErrorActivity" />
+        <activity android:name="com.mikhail.weatherclient.presentation.ErrorActivity" />
         <activity
-            android:name="com.mikhail.weatherclient.MainActivity"
+            android:name="com.mikhail.weatherclient.presentation.MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
