--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'THE_WEATHER_DATABASE_API', keystoreProperties['THE_WEATHER_DATABASE_API']
     }
     buildTypes {
         release {
