--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.mikhail.weatherclient.presentation.SettingsActivity" />
-        <activity android:name="com.mikhail.weatherclient.presentation.CityChangerActivity" />
-        <activity android:name="com.mikhail.weatherclient.Constants" />
-        <activity android:name="com.mikhail.weatherclient.presentation.ErrorActivity" />
         <activity
             android:name="com.mikhail.weatherclient.presentation.MainActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,7 +30,7 @@
 
         <service
             android:name="com.mikhail.weatherclient.WeatherService"
-            android:exported="false"></service>
+            android:exported="false" />
     </application>
 
 </manifest>
