--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@
 
 buildscript {
     ext.kotlin_version = '1.5.30'
+    ext.gradle_version = '7.0.2'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -26,4 +27,24 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    appCompatVersion = '1.0.2'
+    constraintlayoutVersion = '1.1.3'
+    legacySupportVersion = 'v4:1.0.0'
+    recyclerViewVersion = '1.0.0'
+    gsonVersion = '2.8.6'
+    retrofitVersion = '2.7.0'
+    okHttp3LoggingInterseptorVersion = '4.2.1'
+    coroutinesVersion = '1.6.3'
+    fragmentVersion = '1.5.0'
+    activityVersion = '1.5.0'
+    googlePlayServicesLocationVersion = '15.0.1'
+    viewModelVersion = '2.3.1'
+    lifecycleExtensionsVersion = '2.0.0'
+    jUnitVersion = '4.12'
+    extJunitVersion = '1.1.0'
+    espressoCoreVersion = '3.1.1'
+    androidMaterialVersion = '1.0.0'
 }
